    - let dpkg-source fail if several upstream orig.tar files are
      available (using different compression scheme) since we don't know
      which one to use.
    - before accepting to build a 3.0 (quilt) source packages, ensure that
      debian/patches is a directory (or non-existing) and that
      debian/patches/series is a file (or non-existing). Closes: #557618

 -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100

dpkg (1.14.27) stable; urgency=low

  * Cherry-pick some fixes from squeeze concerning new source formats:
    - dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
      with a "component" name containing dashes. Closes: #524376
    - ensure that the automatic patch created in format "3.0 (quilt)" is
      always well registered with quilt even when it's updated by a new call
      to dpkg-source. Thanks to Goswin von Brederlow for the initial patch.
      Closes: #525858
    - do not update/create debian/patches/.dpkg-source-applied during build,
      it's only meant to document what patches have been applied at extraction
      time. Closes: #525835
    - call quilt only once to apply all patches instead of once per patch
      when building 3.0 (quilt) source packages. Closes: #518453

 -- Raphael Hertzog <hertzog@debian.org>  Fri, 13 Nov 2009 17:45:15 +0100

dpkg (1.14.26) unstable; urgency=low

  [ Raphael Hertzog ]
  * Fix dpkg-source to not die when uncompressor processes are killed by
    SIGPIPE due to tar closing the pipe without exhausting all the data
    available. Closes: #523329

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #514106
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #514106
  * Swedish (Peter Krefting).

 -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 19:07:40 +0200

dpkg (1.14.25) unstable; urgency=low
